--- a/PI-Dogs-main/client/src/Components/Views/About/about.module.css
+++ b/PI-Dogs-main/client/src/Components/Views/About/about.module.css
@@ -59,7 +59,7 @@
     width: 10rem;
     height: 10rem;
     border-radius: 50%;
-    /* background-image: url('../../images/foto.jpeg'); */
+    background-image: url('../../../assets/arale.jpeg');
     background-size:cover;
     border: 2px solid #000000;
     margin: .5rem;
