--- a/PI-Dogs-main/client/src/Components/Views/Landing/landing.module.css
+++ b/PI-Dogs-main/client/src/Components/Views/Landing/landing.module.css
@@ -24,8 +24,8 @@
     }
   
   .land{
-      width: 54vw;
-      height: 46vh;
+      width: 55vw;
+      height: 48vh;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -80,3 +80,25 @@
       align-items: center;
     }
   
+
+    @media (max-width: 500px) {
+      .layout{
+        display: flex;
+        flex-direction: column;
+      }
+      .header h1{
+          font-size: 1rem;
+      }
+      .main{
+          flex-direction: column;
+          width: 100%;
+      }
+      .body{
+          width: 100%;
+      }
+      .leftSide{
+          width: 100%;
+          flex-direction: column;
+          position: sticky;
+      }
+    }
